# ClydeWhisper

./: .gitignore  README.md  build.sh  pyproject.toml  requirements.txt
ClydeWhisper/: views.py
apps/: apps.py  views.py
config/: asgi.py  settings.py  urls.py  wsgi.py
linebot_project/: settings.py  urls.py
